# robotics

./: README.md
project1/: CMakeLists.txt  package.xml
project1/cfg/: parameters.cfg
project1/launch/: launcher.launch  launcher_bag2.launch
project1/matlab code/: apparent_baseline_gt_pose.m  apparent_baseline_scout_odom.m  estimate_gear_ratio.m
project1/src/: pub_odometry.cpp  pub_velocities.cpp
project1/srv/: ResetOdometryToGivenPose.srv
project2/: CMakeLists.txt  package.xml
project2/launch/: amcl.launch.xml  gmapping.launch  gmapping.launch.xml  localization+amcl.launch
project2/maps/: map.pgm  map.yaml
project2/rviz/: gmapping_rviz_config.rviz  localization_and_amcl_config.rviz
